# blendman

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  dev.ps1  dev.py  dev.sh  mypy_recursive.sh  pyproject.toml
.github/: copilot-instructions.md
.github/chatmodes/: 4.1.chatmode.md
.github/projects/feats/000_EXAMPLE_multi_agent/: INITIAL.md  NOTEPAD.md  PRD.md
.github/projects/feats/001_pocketbase_api/: INITIAL.md  NOTEPAD.md  PRD.md
.github/projects/feats/002_rename_watcher/: INITIAL.md  NOTEPAD.md  PRD.md
.github/projects/feats/003_fuzzing_generative_tests/: INITIAL.md  NOTEPAD.md  PRD_V2.md
.github/projects/feats/004_db_interface_watcher_log/: INITIAL.md  NOTEPAD.md  PRD.md
.github/projects/feats/005_cli_interface/: INITIAL.md  NOTEPAD.md  PRD.md
.github/projects/feats/006_pocketbase_auth_management/: INITIAL.md  NOTEPAD.md  PRD.md
.github/projects/feats/007_full_wire_up/: INITIAL.md  NOTEPAD.md  PRD.md
.github/projects/templates/: INITIAL.md  PRD.md
.github/prompts/: create-prd.prompt.md  execute-prd.prompt.md
.github/workflows/: ci.yml
mermaid/: blendman.md  pocketbase_backend.md  rename_watcher.md
src/blendman/: __init__.py  __main__.py  cli.py  db_interface.py  main.py  models.py  pocketbase_manager_cli.py  prompt_ui.py  watcher_bridge.py
src/blendman/commands/: backend.py  config.py  pocketbase.py  watcher.py
tests/blendman/: conftest.py  test_cli.py  test_db_interface.py  test_integration_end_to_end.py  test_models.py  test_watcher_bridge.py
