[tool.uv.workspace]
members = ["packages/*"]
[project]
name = "blendman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.2",
]

[project.scripts]
pocketbase-manager = "pocketbase_manager_cli:main"
