[tool.uv.workspace]
members = ["packages/rename_watcher", "packages/pocketbase_backend"]

[project]
name = "blendman"
version = "0.1.0"
description = "Blendman CLI for Blender workflows and PocketBase integration."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.2",
    "tomli>=2.0.1",
    "requests>=2.0.0",
    "pylint>=3.0.0",
    "pyfakefs>=5.4.0",
    "hypothesis>=6.0.0",
    "watchdog>=2.1.5",
    "pathspec>=0.12.1",
    "pydantic>=2.11.7",
    "typer[all]>=0.12.3",
    "rich>=13.7.1",
    "structlog>=25.4.0",
    "pyfiglet>=1.0.3",
    "prompt_toolkit>=3.0.51",
]

[project.scripts]
pocketbase-manager = "pocketbase_manager_cli:main"
